@@ -19,6 +19,7 @@ dectorio-lawnmower=Enable Lawnmower
 dectorio-item-group=Separate Crafting Tab
 dectorio-vanilla-hazard-concrete-style=Use default Factorio Hazard concrete style
 dectorio-landscaping-blueprintable=Landscaping items are blueprintable
+dectorio-remove-decoratives-near-entity=Remove decoratives near newly placed entities
 dectorio-painted-concrete-speed-modifier=Painted concrete speed modifier
 dectorio-decorative-removal-probability=Decoration removal probability
 dectorio-flooring-stack-size=Flooring items stack size
